--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background: linear-gradient(to top, white 30%, rgb(71, 71, 71));
+  background: linear-gradient(to bottom, white 30%, hsl(194, 100%, 37%));
   height: 150vh;
 }
 
