--- a/css/styles.css
+++ b/css/styles.css
@@ -228,18 +228,18 @@ main form input,select {
     }
     main .valor {
         text-shadow: none;
-        text-shadow: 0px 0px 0 rgb(104,104,104),
-                    1px 1px 0 rgb(96,96,96),
-                    2px 2px 0 rgb(88,88,88),
-                    0px 0px 4px rgba(0,0,0,.2);
+        text-shadow: 0 0 0 rgb(104,104,104),
+                    .5px .5px 0 rgb(96,96,96),
+                    1px 1px 0 rgb(88,88,88),
+                    0 0 4px rgba(0,0,0,.2);
     }
     
     .div-valor {
         text-shadow: none;
-        text-shadow: 0px 0px 0 rgb(104,104,104),
-                    1px 1px 0 rgb(96,96,96),
-                    2px 2px 0 rgb(88,88,88),
-                    0px 0px 4px rgba(0,0,0,.2);
+        text-shadow: 0 0 0 rgb(104,104,104),
+                    .5px .5px 0 rgb(96,96,96),
+                    1px 1px 0 rgb(88,88,88),
+                    0 0 4px rgba(0,0,0,.2);
     }
   }
 
@@ -247,10 +247,6 @@ main form input,select {
     .div-valor {
       font-size: 1.2rem;
       margin-left: 40px;
-      text-shadow: none;
-    }
-    .div-valor span {
-      text-shadow: none;
     }
     h1 {
       font-size: 1rem;
@@ -283,7 +279,7 @@ main form input,select {
       font-size: 1.3rem;
     }
     .div-valor {
-      padding: .5rem 1rem 1rem .3rem;
+      padding: .5rem 1rem 1rem 1rem;
     }
   }
 
